<resources>
    <string name="app_name">MathTest</string>
    <string name="tab_text_1">Test</string>
    <string name="tab_text_2">Formulas</string>
    <string name="action_settings">Settings</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="correct_formula_toast_title">Correct</string>
    <string name="wrong_formula_toast_title">Wrong attempts left:</string>
    <string name="correct_formula_dialog_title">Correct formula</string>
    <string name="correct_formula_dialog_ok_btn">OK</string>
    <string name="final_dialog_correct">Correct</string>
    <string name="final_dialog_wrong">Wrong</string>
    <string name="final_dialog_success">You have completed the test</string>
    <string name="final_dialog_exit">Exit</string>

    <string name="list_lang_title">Languages</string>
    <string name="list_lang_summary">Interface language</string>
    <string name="dest_home_title">MathTest</string>
    <string name="dest_subcategories_title">Subcategories</string>
    <string name="dest_test_title">Test</string>
    <string name="dest_formulas_list_title">Formulas</string>
    <string name="dest_settings_title">Settings</string>
    <string name="pref_cb_dark_style">Dark theme</string>
    <string name="pref_cb_dark_style_summary">The application is in dark colors</string>

    <string-array name="settings_lang">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="settings_lang_values">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string name="btn_text">Advertising</string>
    <string name="banner_ad_yandex_id" translatable="false">R-M-527828-1</string>
    <string name="banner_ad_yandex_meditation_id" translatable="false">adf-338318/1077608</string>
    <string name="interstitial_ad_yandex_meditation_id" translatable="false">adf-338318/1090603</string>

</resources>
