<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_math"
            app:startDestination="@id/tabs_dest">

    <fragment
            android:name="com.zelyder.mathtest.ui.fragments.TabsFragment"
            android:label="@string/dest_home_title"
            android:id="@+id/tabs_dest">

        <action
                android:id="@+id/to_test_action"
                app:destination="@id/subcategories_dest" app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/fade_out"/>

    </fragment>

    <fragment android:id="@+id/test_dest"
              android:name="com.zelyder.mathtest.ui.fragments.TestFragment"
              android:label="@string/dest_test_title"
              tools:layout="@layout/fragment_test"/>
    <fragment android:id="@+id/subcategories_dest"
              android:name="com.zelyder.mathtest.ui.fragments.SubcategoriesFragment"
              android:label="@string/dest_subcategories_title"
              tools:layout="@layout/fragment_subcategories">

        <action
                android:id="@+id/to_test_action"
                app:destination="@id/test_dest"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>

        <action android:id="@+id/to_list_action"
                app:destination="@id/formulasListFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>

    </fragment>
    <fragment android:id="@+id/formulasListFragment"
              android:name="com.zelyder.mathtest.ui.fragments.FormulasListFragment"
              android:label="@string/dest_formulas_list_title" tools:layout="@layout/fragment_formulas_list"/>
    <fragment
            android:id="@+id/settingsFragment"
            android:name="com.zelyder.mathtest.ui.fragments.SettingsFragment"
            android:label="@string/dest_settings_title" />
    <action android:id="@+id/to_settings_action" app:destination="@id/settingsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>


</navigation>